Refactor styles and update game card layout

--- a/index.html
+++ b/index.html
@@ -6,98 +6,27 @@
     <title>Waseem's Mega Game Hub</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Bebas+Neue&display=swap');
-        
-        :root {
-            --primary: #ff0055;
-            --secondary: #00ffcc;
-            --ff-yellow: #ffcc00;
-            --dark: #0a0a0a;
-            --glass: rgba(255, 255, 255, 0.1);
-        }
-
-        body {
-            margin: 0; padding: 0;
-            background: var(--dark);
-            background-image: radial-gradient(circle at 20% 30%, #1a0033 0%, transparent 50%),
-                              radial-gradient(circle at 80% 70%, #001a1a 0%, transparent 50%);
-            color: white; font-family: 'Fredoka One', cursive;
-            display: flex; flex-direction: column; align-items: center; min-height: 100vh;
-        }
-
-        header {
-            text-align: center; padding: 40px 20px;
-        }
-        h1 {
-            font-family: 'Bebas Neue', sans-serif;
-            font-size: 60px; margin: 0; letter-spacing: 5px;
-            background: linear-gradient(to right, var(--primary), var(--secondary));
-            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-        }
-
-        .game-container {
-            display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 25px; width: 90%; max-width: 1200px; padding: 20px;
-        }
-
-        .game-card {
-            background: var(--glass); backdrop-filter: blur(10px);
-            border-radius: 20px; border: 1px solid rgba(255,255,255,0.1);
-            overflow: hidden; transition: 0.4s; text-decoration: none; color: white;
-            display: flex; flex-direction: column;
-        }
-        .game-card:hover {
-            transform: translateY(-10px);
-            border-color: var(--ff-yellow);
-            box-shadow: 0 15px 30px rgba(255, 204, 0, 0.2);
-        }
-
-        .card-img {
-            height: 160px; display: flex; align-items: center; justify-content: center;
-            font-size: 60px; background: rgba(0,0,0,0.3);
-        }
-
+        body { margin: 0; background: #0a0a0a; color: white; font-family: 'Fredoka One', cursive; display: flex; flex-direction: column; align-items: center; }
+        header { text-align: center; padding: 30px; }
+        .game-container { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 20px; }
+        .game-card { background: rgba(255,255,255,0.1); border-radius: 20px; width: 280px; overflow: hidden; text-decoration: none; color: white; border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; }
+        .game-card:hover { transform: translateY(-10px); border-color: #ffcc00; }
+        .card-img { height: 150px; display: flex; align-items: center; justify-content: center; font-size: 50px; background: #222; }
         .card-info { padding: 15px; text-align: center; }
-        .card-info h2 { margin: 5px 0; font-family: 'Bebas Neue'; font-size: 28px; color: var(--ff-yellow); }
-        .play-btn { background: var(--ff-yellow); color: black; padding: 8px 20px; border-radius: 10px; display: inline-block; font-weight: bold; margin-top: 10px; }
+        .play-btn { background: #ffcc00; color: black; padding: 10px 20px; border-radius: 10px; display: inline-block; font-weight: bold; margin-top: 10px; }
     </style>
 </head>
 <body>
-
-    <header>
-        <h1>MEGA GAME HUB</h1>
-        <p>Experience the Cinematic Gaming Revolution</p>
-    </header>
-
+    <header><h1>MEGA GAME HUB</h1><p>Cinematic Gaming by Waseem</p></header>
     <div class="game-container">
         <a href="candy.html" class="game-card">
             <div class="card-img" style="background: linear-gradient(45deg, #430080, #ff0055);">🍭</div>
-            <div class="card-info">
-                <h2>CANDY MAFIA 3D</h2>
-                <p>Action & Dialogues. Join the underworld!</p>
-                <div class="play-btn" style="background: var(--primary); color: white;">PLAY NOW</div>
-            </div>
+            <div class="card-info"><h2>CANDY MAFIA 3D</h2><div class="play-btn" style="background: #ff0055; color: white;">PLAY NOW</div></div>
         </a>
-
         <a href="freefire.html" class="game-card">
             <div class="card-img" style="background: linear-gradient(45deg, #ff3300, #ffcc00);">🔫</div>
-            <div class="card-info">
-                <h2>FREE FIRE: HEADSHOT</h2>
-                <p>Training Range. Show your aiming skills!</p>
-                <div class="play-btn">PLAY NOW</div>
-            </div>
+            <div class="card-info"><h2>FREE FIRE AIM</h2><div class="play-btn">PLAY NOW</div></div>
         </a>
     </div>
-
-    <div style="margin: 40px 0; background: var(--glass); padding: 20px; border-radius: 20px; width: 80%; max-width: 500px; text-align: center; border: 1px solid var(--primary);">
-        <h2 style="color: var(--primary); font-family: 'Bebas Neue';">🏆 HALL OF FAME</h2>
-        <p>User: Waseem Asghar (Producer)</p>
-        <p>Best Score: <span id="userBest">0</span></p>
-    </div>
-
-    <footer style="margin-bottom: 20px; color: #555;">&copy; 2026 Waseem Productions</footer>
-
-    <script>
-        document.getElementById('userBest').innerText = localStorage.getItem('candyScore') || 0;
-    </script>
 </body>
 </html>
