--- a/index.html
+++ b/index.html
@@ -3,30 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Waseem's Mega Game Hub</title>
+    <title>Waseem's Candy Mafia</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Bebas+Neue&display=swap');
-        body { margin: 0; background: #0a0a0a; color: white; font-family: 'Fredoka One', cursive; display: flex; flex-direction: column; align-items: center; }
-        header { text-align: center; padding: 30px; }
-        .game-container { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 20px; }
-        .game-card { background: rgba(255,255,255,0.1); border-radius: 20px; width: 280px; overflow: hidden; text-decoration: none; color: white; border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; }
-        .game-card:hover { transform: translateY(-10px); border-color: #ffcc00; }
-        .card-img { height: 150px; display: flex; align-items: center; justify-content: center; font-size: 50px; background: #222; }
-        .card-info { padding: 15px; text-align: center; }
-        .play-btn { background: #ffcc00; color: black; padding: 10px 20px; border-radius: 10px; display: inline-block; font-weight: bold; margin-top: 10px; }
+        body { margin: 0; background: #0a0a0a; color: white; font-family: 'Fredoka One', cursive; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; }
+        .game-card { background: rgba(255,255,255,0.1); border-radius: 25px; width: 300px; padding: 20px; text-align: center; border: 2px solid #ff0055; transition: 0.3s; text-decoration: none; color: white; }
+        .game-card:hover { transform: scale(1.05); box-shadow: 0 0 30px #ff0055; }
+        .card-img { font-size: 80px; margin-bottom: 20px; }
+        .play-btn { background: #ff0055; color: white; padding: 15px 30px; border-radius: 15px; display: inline-block; font-weight: bold; margin-top: 20px; font-size: 20px; }
     </style>
 </head>
 <body>
-    <header><h1>MEGA GAME HUB</h1><p>Cinematic Gaming by Waseem</p></header>
-    <div class="game-container">
-        <a href="candy.html" class="game-card">
-            <div class="card-img" style="background: linear-gradient(45deg, #430080, #ff0055);">🍭</div>
-            <div class="card-info"><h2>CANDY MAFIA 3D</h2><div class="play-btn" style="background: #ff0055; color: white;">PLAY NOW</div></div>
-        </a>
-        <a href="freefire.html" class="game-card">
-            <div class="card-img" style="background: linear-gradient(45deg, #ff3300, #ffcc00);">🔫</div>
-            <div class="card-info"><h2>FREE FIRE AIM</h2><div class="play-btn">PLAY NOW</div></div>
-        </a>
-    </div>
+    <header style="margin-bottom: 40px; text-align: center;">
+        <h1 style="font-family: 'Bebas Neue'; font-size: 50px; color: #ff0055; margin: 0;">CANDY MAFIA 3D</h1>
+        <p>Created by Waseem Asghar</p>
+    </header>
+
+    <a href="candy.html" class="game-card">
+        <div class="card-img">🍭</div>
+        <h2>PLAY NOW</h2>
+        <p>Experience the Cinematic Action!</p>
+        <div class="play-btn">START GAME ▶</div>
+    </a>
 </body>
 </html>
