--- a/candy.html
+++ b/candy.html
@@ -3,30 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Candy Mafia: Play Mode</title>
+    <title>Candy Mafia: Waseem Productions</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Bebas+Neue&display=swap');
-        :root { --gold: #ffd700; --pink: #ff0055; }
-        body { margin: 0; padding: 0; font-family: 'Fredoka One', cursive; background: #050505; color: white; overflow: hidden; display: flex; flex-direction: column; align-items: center; touch-action: none; }
-        .header { width: 100%; padding: 15px 0; background: rgba(0,0,0,0.9); display: flex; justify-content: space-around; align-items: center; border-bottom: 2px solid var(--gold); }
-        .board-bg { background: rgba(255, 215, 0, 0.03); padding: 10px; border-radius: 20px; margin: 20px auto; border: 3px solid var(--gold); transform: rotateX(10deg); }
-        .grid { display: grid; grid-template-columns: repeat(8, 42px); gap: 6px; }
-        .slot { width: 42px; height: 42px; background: rgba(255,255,255,0.05); border-radius: 8px; display: flex; align-items: center; justify-content: center; }
-        .fruit { font-size: 28px; cursor: pointer; transition: 0.2s; user-select: none; }
+        
+        :root { --gold: #ffd700; --neon: #ff00ff; }
+
+        body { 
+            margin: 0; padding: 0; font-family: 'Fredoka One', cursive; 
+            background: #050505; color: white; overflow: hidden; 
+            display: flex; flex-direction: column; align-items: center;
+            touch-action: none; perspective: 1000px;
+        }
+
+        /* Header Fix for Mobile */
+        .header { 
+            width: 100%; padding: 10px 0; background: rgba(0,0,0,0.9);
+            display: flex; justify-content: space-around; align-items: center; 
+            border-bottom: 2px solid var(--gold); font-size: 14px;
+        }
+        .stat b { color: var(--gold); }
+
+        /* Responsive Board - Screen par fit karne ke liye */
+        .board-bg { 
+            background: rgba(255, 215, 0, 0.03); 
+            padding: 8px; border-radius: 15px; 
+            margin: 20px auto; border: 3px solid var(--gold); 
+            width: 92vw; /* Phone ki width ke hisaab se */
+            max-width: 400px; /* Tablet/Desktop par zyada bada na ho */
+            box-sizing: border-box;
+            transform: rotateX(10deg);
+        }
+
+        .grid { 
+            display: grid; 
+            grid-template-columns: repeat(8, 1fr); /* 8 barabar columns */
+            gap: 4px; 
+        }
+
+        .slot { 
+            aspect-ratio: 1/1; /* Square shape */
+            background: rgba(255,255,255,0.05); 
+            border-radius: 6px; 
+            display: flex; align-items: center; justify-content: center; 
+        }
+
+        .fruit { 
+            font-size: 6.5vw; /* Icons screen ke hisaab se chote honge */
+            max-font-size: 32px;
+            cursor: pointer; transition: transform 0.2s; user-select: none;
+        }
+
+        @media (min-width: 500px) { .fruit { font-size: 32px; } }
+
+        /* VFX Popups */
+        .vfx-text {
+            position: fixed; pointer-events: none; color: var(--gold);
+            font-family: 'Bebas Neue'; font-size: 30px; text-shadow: 0 0 10px #000;
+            animation: float 0.8s ease-out forwards; z-index: 1000;
+        }
+        @keyframes float { 0% { opacity: 1; transform: translate(-50%, 0) scale(1); } 100% { opacity: 0; transform: translate(-50%, -80px) scale(1.5); } }
     </style>
 </head>
 <body>
+
     <div class="header">
         <div class="stat">Cash: <b id="coins">0</b></div>
-        <div style="font-family: 'Bebas Neue'; color: var(--gold); font-size: 24px;">MAFIA MISSION</div>
+        <div style="font-family: 'Bebas Neue'; color: var(--gold); font-size: 20px;">MAFIA MISSION</div>
         <div class="stat">Moves: <b id="moves">30</b></div>
     </div>
     
-    <div class="board-bg" id="board"><div class="grid" id="grid"></div></div>
+    <div id="vfx-box"></div>
+
+    <div class="board-bg" id="board">
+        <div class="grid" id="grid"></div>
+    </div>
 
 <script>
     const gridEl = document.getElementById('grid'), coinsEl = document.getElementById('coins'), movesEl = document.getElementById('moves');
     const items = ['🔫', '🕶️', '💵', '💎', '🚬', '🚗'];
+    const quotes = ["JHAKAS!", "DHAMAKA!", "DON STYLE!", "MAFIA!"];
     let squares = [], moves = 30, coins = 0, sX, sY;
 
     function init() {
@@ -34,10 +90,11 @@
         for (let i = 0; i < 64; i++) {
             const f = document.createElement('div'); f.className = 'fruit';
             f.innerHTML = items[Math.floor(Math.random()*6)];
+            // Touch Swiping Logic
             f.ontouchstart = (e) => { sX = e.touches[0].clientX; sY = e.touches[0].clientY; };
             f.ontouchend = (e) => { 
                 let dX = e.changedTouches[0].clientX - sX, dY = e.changedTouches[0].clientY - sY;
-                if(Math.abs(dX) > 25 || Math.abs(dY) > 25) {
+                if(Math.abs(dX) > 20 || Math.abs(dY) > 20) {
                     let dir = Math.abs(dX) > Math.abs(dY) ? (dX > 0 ? 1 : -1) : (dY > 0 ? 8 : -8);
                     move(i, i + dir);
                 }
@@ -66,11 +123,20 @@
             if(r < 6 && squares[i].innerHTML === squares[i+8].innerHTML && squares[i].innerHTML === squares[i+16].innerHTML) { matches.add(i); matches.add(i+8); matches.add(i+16); }
         }
         if(matches.size > 0) {
+            if(matches.size >= 4) showVFX();
             matches.forEach(id => { squares[id].style.opacity = "0"; });
             coins += matches.size * 10; coinsEl.innerText = coins;
             setTimeout(fill, 300); return true;
         }
         return false;
+    }
+
+    function showVFX() {
+        const v = document.createElement('div'); v.className = 'vfx-text';
+        v.innerText = quotes[Math.floor(Math.random()*quotes.length)];
+        v.style.left = "50%"; v.style.top = "50%";
+        document.body.appendChild(v);
+        setTimeout(() => v.remove(), 800);
     }
 
     function fill() {
